# The-Kochi-Brief

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  spec.md
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: 28ccf972b65b_update_user_to_mapped.py  49e31c8e49bd_making_datetime_columns_timezone_aware_.py  e3deeef46431_add_email_verification_time_column.py
app/: main.py
app/api/: articles.py  auth.py  users.py
app/core/: config.py
app/core/db/: session.py
app/core/security/: dependency.py  jwt.py
app/exceptions/: types.py
app/mail/: sender.py
app/models/: article.py  user.py
app/schemas/: article.py  user.py
app/scrapers/: newindian_scraper.py  rss_scraper.py  toi_scraper.py
app/services/: article_service.py  newsletter_service.py  user_service.py
app/utils/: celery_runner.py  response.py  summarizer.py  time_utils.py
app/workers/: celery.py  tasks.py
backend/: .dockerignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 107ce90511d5_add_last_article_sent_at_to_user.py  2da9033ef4f2_article_table_creation.py  5c22b82982d9_create_users_table.py
backend/app/: main.py
backend/app/api/: admin.py  articles.py  users.py  v1.py
backend/app/core/: config.py
backend/app/exceptions/: handler.py  types.py
backend/app/mail/: sender.py
backend/app/models/: article.py  user.py
backend/app/schemas/: article.py  user.py
backend/app/scrapers/: base_scraper.py  newindian_scraper.py
backend/app/services/: article_service.py  newsletter_service.py  user_service.py
backend/app/utils/: summarizer.py  time_utils.py
backend/app/workers/: celery.py  tasks.py
backend/tests/: test_main.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/data/: articles.ts  (+1 more)
tests/: test_main.py  test_user_service.py
(+24 files in other folders)
