[project]
name = "kochi-newsletter"
version = "0.1.0"
description = "A local-news aggregator and newsletter for Kochi, India."
authors = [{ name = "Gemini", email = "gemini@google.com" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic[email]",
    "pydantic-settings",
    "sqlmodel",
    "alembic",
    "celery",
    "redis",
    "requests",
    "beautifulsoup4",
    "python-jose[cryptography]",
    "python-multipart",
    "mailgun",
    "pre-commit",
    "ruff",
    "black",
    "isort",
    "psycopg2>=2.9.11",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.2",
    "httpx>=0.28.1",
    "google-genai>=1.69.0",
    "aiolimiter>=1.2.1",
    "google-api-core>=2.30.2",
    "lxml>=6.0.3",
    "python-dotenv>=1.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
